rumprun: Add MH/MRG support

--- a/app-tools/rumprun-bake.conf
+++ b/app-tools/rumprun-bake.conf
@@ -113,6 +113,11 @@ fnoc
 # then, define some end-user configs
 #
 
+conf mrg_base
+	create		"MRG"
+	assimilate	_miconf
+fnoc
+
 conf xen_pv
 	create		"Xen with paravirtualized I/O drivers"
 	assimilate	_miconf
